--- a/libexec/fingerd/Makefile
+++ b/libexec/fingerd/Makefile
@@ -1,13 +1,13 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/4/93
-# $FreeBSD: src/libexec/fingerd/Makefile,v 1.11 2004/03/29 09:29:51 pjd Exp $
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/4/93
+# $FreeBSD: stable/10/libexec/fingerd/Makefile 201380 2010-01-02 09:50:19Z ed $
 
 PROG=	fingerd
 DPADD=	${LIBUTIL}
 LDADD=	-lutil
 MAN=	fingerd.8
-WARNS?=	2
 
+WARNS?=	2
 WFORMAT=0
 
 .include <bsd.prog.mk>
