--- a/usr.sbin/arp/Makefile
+++ b/usr.sbin/arp/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.2 (Berkeley) 4/18/94
 # $MidnightBSD$
+#	@(#)Makefile	8.2 (Berkeley) 4/18/94
+# $FreeBSD: stable/10/usr.sbin/arp/Makefile 193984 2009-06-11 10:30:30Z des $
 
 PROG=	arp
 MAN=	arp.4 arp.8
