--- a/usr.sbin/authpf/Makefile
+++ b/usr.sbin/authpf/Makefile
@@ -1,7 +1,7 @@
-# $FreeBSD: src/usr.sbin/authpf/Makefile,v 1.4 2006/09/21 18:16:22 kan Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.sbin/authpf/Makefile 253138 2013-07-10 07:40:30Z des $
 
 .PATH:	${.CURDIR}/../../contrib/pf/authpf
-.PATH:	${.CURDIR}/../../contrib/pf/pfctl
 
 PROG=	authpf
 MAN=	authpf.8
@@ -11,8 +11,6 @@ BINMODE= 6555
 
 SRCS=   authpf.c
 
-CFLAGS+= -I${.CURDIR}/../../contrib/pf/pfctl
-
 # XXX ALTQ:
 CFLAGS+= -DENABLE_ALTQ
 
@@ -20,5 +18,8 @@ LDADD+= -lm -lmd -lutil
 DPADD+= ${LIBM} ${LIBMD} ${LIBUTIL}
 
 WARNS?=	3
+
+LINKS=	${BINDIR}/authpf ${BINDIR}/authpf-noip
+MLINKS=	authpf.8 authpf-noip.8
 
 .include <bsd.prog.mk>
