--- a/.gitattributes
+++ b/.gitattributes
@@ -77308,6 +77308,9 @@ usr.sbin/bhyvectl/bhyvectl.c svneol=native#text/plain
 usr.sbin/bhyveload/Makefile svneol=native#text/plain
 usr.sbin/bhyveload/bhyveload.8 svneol=native#text/plain
 usr.sbin/bhyveload/bhyveload.c svneol=native#text/plain
+usr.sbin/binmiscctl/Makefile svneol=native#text/plain
+usr.sbin/binmiscctl/binmiscctl.8 svneol=native#text/plain
+usr.sbin/binmiscctl/binmiscctl.c svneol=native#text/plain
 usr.sbin/bluetooth/Makefile -text
 usr.sbin/bluetooth/Makefile.inc -text
 usr.sbin/bluetooth/ath3kfw/Makefile -text
