--- a/usr.sbin/auditdistd/Makefile
+++ b/usr.sbin/auditdistd/Makefile
@@ -1,5 +1,6 @@
 # $MidnightBSD$
-# $FreeBSD: release/9.2.0/usr.sbin/auditdistd/Makefile 243752 2012-12-01 15:11:46Z rwatson $
+#
+# $FreeBSD: stable/10/usr.sbin/auditdistd/Makefile 249657 2013-04-19 19:45:00Z ed $
 #
 
 OPENBSMDIR=${.CURDIR}/../../contrib/openbsm
@@ -10,6 +11,7 @@ OPENBSMDIR=${.CURDIR}/../../contrib/openbsm
 CFLAGS+=-I${OPENBSMDIR} -I${OPENBSMDIR}/bin/auditdistd
 
 NO_WFORMAT=
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 PROG=	auditdistd
 SRCS=	auditdistd.c
