--- a/usr.sbin/adduser/Makefile
+++ b/usr.sbin/adduser/Makefile
@@ -1,5 +1,5 @@
 # $MidnightBSD$
-# $FreeBSD: src/usr.sbin/adduser/Makefile,v 1.19 2004/03/30 21:50:42 trhodes Exp $
+# $FreeBSD: stable/10/usr.sbin/adduser/Makefile 127644 2004-03-30 21:50:42Z trhodes $
 
 SCRIPTS=adduser.sh rmuser.sh
 MAN=	adduser.conf.5 adduser.8 rmuser.8
