add setchannel from freebsd 10

--- a/.gitattributes
+++ b/.gitattributes
@@ -76597,6 +76597,9 @@ usr.bin/sed/sed.1 -text
 usr.bin/seq/Makefile -text
 usr.bin/seq/seq.1 -text
 usr.bin/seq/seq.c -text
+usr.bin/setchannel/Makefile svneol=native#text/plain
+usr.bin/setchannel/setchannel.1 svneol=native#text/plain
+usr.bin/setchannel/setchannel.c svneol=native#text/plain
 usr.bin/shar/Makefile -text
 usr.bin/shar/shar.1 -text
 usr.bin/shar/shar.sh -text
