--- a/.gitattributes
+++ b/.gitattributes
@@ -76641,6 +76641,9 @@ usr.bin/split/Makefile -text
 usr.bin/split/split.1 -text
 usr.bin/split/split.c -text
 usr.bin/sqlite3/Makefile -text
+usr.bin/ssh-copy-id/Makefile svneol=native#text/plain
+usr.bin/ssh-copy-id/ssh-copy-id.1 svneol=native#text/plain
+usr.bin/ssh-copy-id/ssh-copy-id.sh svneol=native#text/plain
 usr.bin/stat/Makefile -text
 usr.bin/stat/stat.1 -text
 usr.bin/stat/stat.c -text
