--- a/usr.bin/rwho/Makefile
+++ b/usr.bin/rwho/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/rwho/Makefile 226427 2011-10-16 08:54:41Z ed $
 
 PROG=	rwho
 
