--- a/usr.bin/at/Makefile
+++ b/usr.bin/at/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/at/Makefile 226420 2011-10-16 07:57:01Z ed $
 
 .include "${.CURDIR}/Makefile.inc"
 
@@ -11,7 +12,7 @@ MLINKS=	at.1 batch.1 \
 	at.1 atq.1 \
 	at.1 atrm.1
 
-WARNS?=	1
+NO_WFORMAT=
 
 BINOWN=	root
 BINMODE= 4555
