--- a/usr.bin/atm/sscop/Makefile
+++ b/usr.bin/atm/sscop/Makefile
@@ -1,6 +1,7 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/atm/sscop/Makefile 314008 2017-02-21 02:24:31Z ngie $
 
-CONTRIB= ${.CURDIR}/../../../contrib/ngatm/sscop
+CONTRIB= ${SRCTOP}/contrib/ngatm/sscop
 
 .PATH:	${CONTRIB}
 
