sync ruptime with freebsd

--- a/usr.bin/ruptime/Makefile
+++ b/usr.bin/ruptime/Makefile
@@ -1,8 +1,7 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/ruptime/Makefile 226419 2011-10-16 07:36:27Z ed $
 
 PROG=	ruptime
-
-WARNS?=	3
 
 .include <bsd.prog.mk>
