--- a/usr.bin/rpcinfo/Makefile
+++ b/usr.bin/rpcinfo/Makefile
@@ -1,5 +1,6 @@
-#	from: @(#)Makefile	5.2 (Berkeley) 5/11/90
 # $MidnightBSD$
+#	from: @(#)Makefile	5.2 (Berkeley) 5/11/90
+# $FreeBSD: stable/10/usr.bin/rpcinfo/Makefile 201386 2010-01-02 10:27:05Z ed $
 
 PROG=	rpcinfo
 SRCS=	rpcinfo.c
