make things static

--- a/usr.bin/rlogin/Makefile
+++ b/usr.bin/rlogin/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 7/19/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 7/19/93
+# $FreeBSD: stable/10/usr.bin/rlogin/Makefile 221123 2011-04-27 17:36:37Z jhb $
 
 PROG=	rlogin
 
