--- a/.gitattributes
+++ b/.gitattributes
@@ -76528,6 +76528,9 @@ usr.bin/progress/Makefile -text
 usr.bin/progress/progress.1 -text
 usr.bin/progress/progress.c -text
 usr.bin/progress/strsuftoll.c -text
+usr.bin/protect/Makefile svneol=native#text/plain
+usr.bin/protect/protect.1 svneol=native#text/plain
+usr.bin/protect/protect.c svneol=native#text/plain
 usr.bin/quota/Makefile -text
 usr.bin/quota/quota.1 -text
 usr.bin/quota/quota.c -text
