--- a/.gitattributes
+++ b/.gitattributes
@@ -76515,6 +76515,21 @@ usr.bin/printenv/printenv.c -text
 usr.bin/printf/Makefile -text
 usr.bin/printf/printf.1 -text
 usr.bin/printf/printf.c -text
+usr.bin/printf/tests/Makefile svneol=native#text/plain
+usr.bin/printf/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/printf/tests/regress.b.out -text
+usr.bin/printf/tests/regress.d.out -text
+usr.bin/printf/tests/regress.f.out -text
+usr.bin/printf/tests/regress.l1.out -text
+usr.bin/printf/tests/regress.l2.out -text
+usr.bin/printf/tests/regress.m1.out -text
+usr.bin/printf/tests/regress.m2.out -text
+usr.bin/printf/tests/regress.m3.out -text
+usr.bin/printf/tests/regress.m4.out -text
+usr.bin/printf/tests/regress.m5.out -text
+usr.bin/printf/tests/regress.s.out -text
+usr.bin/printf/tests/regress.sh svneol=native#text/plain
+usr.bin/printf/tests/regress.zero.out -text
 usr.bin/procstat/Makefile -text
 usr.bin/procstat/procstat.1 -text
 usr.bin/procstat/procstat.c -text
