sync newgrp with freebsd

--- a/usr.bin/newgrp/Makefile
+++ b/usr.bin/newgrp/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/newgrp/Makefile 137164 2004-11-03 18:01:21Z ru $
 
 PROG=	newgrp
 DPADD=	${LIBCRYPT} ${LIBUTIL}
