--- a/usr.bin/netstat/Makefile
+++ b/usr.bin/netstat/Makefile
@@ -1,11 +1,13 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/12/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/12/93
+# $FreeBSD: stable/10/usr.bin/netstat/Makefile 291824 2015-12-04 21:11:17Z bdrewery $
 
 .include <bsd.own.mk>
 
 PROG=	netstat
 SRCS=	if.c inet.c main.c mbuf.c mroute.c netisr.c route.c \
-	unix.c atalk.c mroute6.c ipsec.c bpf.c pfkey.c sctp.c
+	unix.c atalk.c mroute6.c ipsec.c bpf.c pfkey.c sctp.c \
+	flowtable.c
 
 WARNS?=	3
 CFLAGS+=-fno-strict-aliasing
@@ -24,6 +26,10 @@ CFLAGS+=-DINET6
 
 .if ${MK_OFED} != "no"
 CFLAGS+=-DSDP
+.endif
+
+.if ${MK_PF} != "no"
+CFLAGS+=-DPF
 .endif
 
 BINGRP=	kmem
