--- a/.gitattributes
+++ b/.gitattributes
@@ -76415,6 +76415,98 @@ usr.bin/nc/Makefile -text
 usr.bin/ncal/Makefile -text
 usr.bin/ncal/ncal.1 -text
 usr.bin/ncal/ncal.c -text
+usr.bin/ncal/tests/Makefile svneol=native#text/plain
+usr.bin/ncal/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/ncal/tests/regress.b-3m200901-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200901-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200902-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200902-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200903-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200903-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200904-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200904-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200905-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200905-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200906-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200906-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200907-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200907-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200908-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200908-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200909-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200909-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200910-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200910-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200911-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200911-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200912-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-3m200912-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2008-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2008-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2009-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2009-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2010-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2010-md-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2011-jd-nhl.out -text
+usr.bin/ncal/tests/regress.b-y2011-md-nhl.out -text
+usr.bin/ncal/tests/regress.f-3A-nhl.out -text
+usr.bin/ncal/tests/regress.f-3AB-nhl.out -text
+usr.bin/ncal/tests/regress.f-3B-nhl.out -text
+usr.bin/ncal/tests/regress.f-3gy-nhl.out -text
+usr.bin/ncal/tests/regress.f-3y-nhl.out -text
+usr.bin/ncal/tests/regress.f-mgm-nhl.out -text
+usr.bin/ncal/tests/regress.f-yA-nhl.out -text
+usr.bin/ncal/tests/regress.f-yAB-nhl.out -text
+usr.bin/ncal/tests/regress.f-yB-nhl.out -text
+usr.bin/ncal/tests/regress.f-ygm-nhl.out -text
+usr.bin/ncal/tests/regress.f-ym-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200901-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200901-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200902-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200902-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200903-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200903-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200904-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200904-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200905-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200905-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200906-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200906-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200907-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200907-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200908-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200908-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200909-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200909-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200910-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200910-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200911-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200911-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200912-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-3m200912-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2008-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2008-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2009-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2009-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2010-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2010-md-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2011-jd-nhl.out -text
+usr.bin/ncal/tests/regress.r-y2011-md-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-3-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-A-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-AB-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-B-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-gmgy-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-m-nhl.out -text
+usr.bin/ncal/tests/regress.s-b-mgy-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-3-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-A-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-AB-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-B-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-gmgy-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-m-nhl.out -text
+usr.bin/ncal/tests/regress.s-r-mgy-nhl.out -text
+usr.bin/ncal/tests/regress.sh svneol=native#text/plain
 usr.bin/ncplist/Makefile -text
 usr.bin/ncplist/ncplist.1 -text
 usr.bin/ncplist/ncplist.c -text
