--- a/usr.bin/mt/Makefile
+++ b/usr.bin/mt/Makefile
@@ -1,6 +1,9 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/mt/Makefile 280438 2015-03-24 14:36:10Z ken $
 
 PROG=	mt
+DPADD=	${LIBMT} ${LIBSBUF} ${LIBBSDXML}
+LDADD=	-lmt -lsbuf -lbsdxml
 
 .include <bsd.prog.mk>
