--- a/usr.bin/msgs/Makefile
+++ b/usr.bin/msgs/Makefile
@@ -1,5 +1,6 @@
-#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/msgs/Makefile 201386 2010-01-02 10:27:05Z ed $
 
 PROG=	msgs
 DPADD=	${LIBTERMCAP}
