--- a/usr.bin/mkulzma/Makefile
+++ b/usr.bin/mkulzma/Makefile
@@ -1,8 +1,9 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/mkulzma/Makefile 292588 2015-12-22 08:03:23Z delphij $
 
 PROG=	mkulzma
 MAN=	mkulzma.8
-DPADD=	${LIBLZMA}
-LDADD=	-llzma
+DPADD=	${LIBLZMA} ${LIBPTHREAD}
+LDADD=	-llzma -lpthread
 
 .include <bsd.prog.mk>
