--- a/.gitattributes
+++ b/.gitattributes
@@ -76383,6 +76383,27 @@ usr.bin/mkesdb_static/Makefile -text
 usr.bin/mkfifo/Makefile -text
 usr.bin/mkfifo/mkfifo.1 -text
 usr.bin/mkfifo/mkfifo.c -text
+usr.bin/mkimg/Makefile svneol=native#text/plain
+usr.bin/mkimg/apm.c svneol=native#text/plain
+usr.bin/mkimg/bsd.c svneol=native#text/plain
+usr.bin/mkimg/ebr.c svneol=native#text/plain
+usr.bin/mkimg/format.c svneol=native#text/plain
+usr.bin/mkimg/format.h svneol=native#text/plain
+usr.bin/mkimg/gpt.c svneol=native#text/plain
+usr.bin/mkimg/image.c svneol=native#text/plain
+usr.bin/mkimg/image.h svneol=native#text/plain
+usr.bin/mkimg/mbr.c svneol=native#text/plain
+usr.bin/mkimg/mkimg.1 svneol=native#text/plain
+usr.bin/mkimg/mkimg.c svneol=native#text/plain
+usr.bin/mkimg/mkimg.h svneol=native#text/plain
+usr.bin/mkimg/pc98.c svneol=native#text/plain
+usr.bin/mkimg/qcow.c svneol=native#text/plain
+usr.bin/mkimg/raw.c svneol=native#text/plain
+usr.bin/mkimg/scheme.c svneol=native#text/plain
+usr.bin/mkimg/scheme.h svneol=native#text/plain
+usr.bin/mkimg/vhd.c svneol=native#text/plain
+usr.bin/mkimg/vmdk.c svneol=native#text/plain
+usr.bin/mkimg/vtoc8.c svneol=native#text/plain
 usr.bin/mklocale/Makefile -text
 usr.bin/mklocale/extern.h -text
 usr.bin/mklocale/ldef.h -text
