--- a/usr.bin/mkesdb_static/Makefile
+++ b/usr.bin/mkesdb_static/Makefile
@@ -1,12 +1,14 @@
-# $FreeBSD$
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/mkesdb_static/Makefile 296740 2016-03-12 18:54:02Z bdrewery $
 
 .PATH: ${.CURDIR}/../../lib/libc/iconv ${.CURDIR}/../mkesdb
 
 PROG=	mkesdb_static
 SRCS=	citrus_bcs.c citrus_db_factory.c citrus_db_hash.c \
 	citrus_lookup_factory.c
-NO_MAN=	yes
+MAN=
 NO_SHARED= yes
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 build-tools: mkesdb_static
 
