--- a/usr.bin/mkcsmapper/Makefile.inc
+++ b/usr.bin/mkcsmapper/Makefile.inc
@@ -1,3 +1,4 @@
+# $MidnightBSD$
 # $FreeBSD: stable/10/usr.bin/mkcsmapper/Makefile.inc 260096 2013-12-30 20:15:46Z dim $
 
 .include <bsd.compiler.mk>
@@ -6,6 +7,4 @@ SRCS+=	lex.l yacc.y
 CFLAGS+= -I${.CURDIR} -I${.CURDIR}/../mkcsmapper \
 	 -I${.CURDIR}/../../lib/libc/iconv \
 	 -I${.CURDIR}/../../lib/libiconv_modules/mapper_std
-.if ${COMPILER_TYPE} == "gcc"
-CFLAGS+= --param max-inline-insns-single=64
-.endif
+CFLAGS.gcc+= --param max-inline-insns-single=64
