--- a/usr.bin/ministat/Makefile
+++ b/usr.bin/ministat/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/ministat/Makefile 183960 2008-10-16 20:39:02Z phk $
 PROG=	ministat
 DPADD=	${LIBM}
 LDADD=	-lm
