sync last with freebsd.

--- a/usr.bin/last/Makefile
+++ b/usr.bin/last/Makefile
@@ -1,8 +1,9 @@
-#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/last/Makefile 226361 2011-10-14 07:26:20Z ed $
 
 PROG=	last
 
-WARNS?=	1
+NO_WFORMAT=
 
 .include <bsd.prog.mk>
