--- a/usr.bin/locale/Makefile
+++ b/usr.bin/locale/Makefile
@@ -1,7 +1,7 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/locale/Makefile 310041 2016-12-13 23:10:35Z vangyzen $
 
 PROG=	locale
-WARNS?=	3
 CFLAGS+= -I${.CURDIR}/../../lib/libc/locale
 
 .include <bsd.prog.mk>
