--- a/.gitattributes
+++ b/.gitattributes
@@ -76085,6 +76085,16 @@ usr.bin/lastcomm/lastcomm.1 -text
 usr.bin/lastcomm/lastcomm.c -text
 usr.bin/lastcomm/pathnames.h -text
 usr.bin/lastcomm/readrec.c -text
+usr.bin/lastcomm/tests/Makefile svneol=native#text/plain
+usr.bin/lastcomm/tests/README -text
+usr.bin/lastcomm/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/lastcomm/tests/v1-amd64-acct.in -text svneol=native#application/octet-stream
+usr.bin/lastcomm/tests/v1-amd64.out -text
+usr.bin/lastcomm/tests/v1-i386.out -text
+usr.bin/lastcomm/tests/v1-sparc64.out -text
+usr.bin/lastcomm/tests/v2-amd64.out -text
+usr.bin/lastcomm/tests/v2-i386.out -text
+usr.bin/lastcomm/tests/v2-sparc64.out -text
 usr.bin/ldd/Makefile -text
 usr.bin/ldd/extern.h -text
 usr.bin/ldd/ldd.1 -text
