--- a/usr.bin/lastcomm/Makefile
+++ b/usr.bin/lastcomm/Makefile
@@ -1,7 +1,14 @@
-#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	From: @(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/lastcomm/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+
+.include <bsd.own.mk>
 
 PROG=	lastcomm
 SRCS=	lastcomm.c readrec.c
+
+.if ${MK_TESTS} != "no"
+SUBDIR+= tests
+.endif
 
 .include <bsd.prog.mk>
