make things static

--- a/usr.bin/lam/Makefile
+++ b/usr.bin/lam/Makefile
@@ -1,5 +1,6 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/lam/Makefile 90415 2002-02-08 22:31:43Z markm $
 
 PROG=	lam
 
