--- a/usr.bin/bmake/tests/Makefile
+++ b/usr.bin/bmake/tests/Makefile
@@ -1,3 +1,4 @@
+# $MidnightBSD$
 # $FreeBSD: stable/10/usr.bin/bmake/tests/Makefile 266074 2014-05-14 18:43:13Z jmmv $
 
 TESTSDIR=	${TESTSBASE}/usr.bin/bmake
