--- a/usr.bin/killall/Makefile
+++ b/usr.bin/killall/Makefile
@@ -1,4 +1,5 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/killall/Makefile 194869 2009-06-24 18:18:35Z jamie $
 
 PROG=	killall
 DPADD=	${LIBJAIL}
