--- a/.gitattributes
+++ b/.gitattributes
@@ -76053,6 +76053,70 @@ usr.bin/join/join.c -text
 usr.bin/jot/Makefile -text
 usr.bin/jot/jot.1 -text
 usr.bin/jot/jot.c -text
+usr.bin/jot/tests/Makefile svneol=native#text/plain
+usr.bin/jot/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/jot/tests/regress.ascii.out -text
+usr.bin/jot/tests/regress.block.out -text
+usr.bin/jot/tests/regress.dddd.out -text
+usr.bin/jot/tests/regress.dddh.out -text
+usr.bin/jot/tests/regress.ddhd.out -text
+usr.bin/jot/tests/regress.ddhd2.out -text
+usr.bin/jot/tests/regress.ddhh.out -text
+usr.bin/jot/tests/regress.ddhh2.out -text
+usr.bin/jot/tests/regress.dhdd.out -text
+usr.bin/jot/tests/regress.dhdh.out -text
+usr.bin/jot/tests/regress.dhhd.out -text
+usr.bin/jot/tests/regress.dhhd2.out -text
+usr.bin/jot/tests/regress.dhhh.out -text
+usr.bin/jot/tests/regress.dhhh2.out -text
+usr.bin/jot/tests/regress.ed.out -text
+usr.bin/jot/tests/regress.grep.out -text
+usr.bin/jot/tests/regress.hddd.out -text
+usr.bin/jot/tests/regress.hddd2.out -text
+usr.bin/jot/tests/regress.hddh.out -text
+usr.bin/jot/tests/regress.hddh2.out -text
+usr.bin/jot/tests/regress.hdhd.out -text
+usr.bin/jot/tests/regress.hdhd2.out -text
+usr.bin/jot/tests/regress.hdhh.out -text
+usr.bin/jot/tests/regress.hdhh2.out -text
+usr.bin/jot/tests/regress.hhdd.out -text
+usr.bin/jot/tests/regress.hhdd2.out -text
+usr.bin/jot/tests/regress.hhdh.out -text
+usr.bin/jot/tests/regress.hhdh2.out -text
+usr.bin/jot/tests/regress.hhhd.out -text
+usr.bin/jot/tests/regress.hhhd2.out -text
+usr.bin/jot/tests/regress.hhhh.out -text
+usr.bin/jot/tests/regress.hhhh2.out -text
+usr.bin/jot/tests/regress.n21.out -text
+usr.bin/jot/tests/regress.rand1.out -text
+usr.bin/jot/tests/regress.rand2.out -text
+usr.bin/jot/tests/regress.sh svneol=native#text/plain
+usr.bin/jot/tests/regress.stutter.out -text
+usr.bin/jot/tests/regress.stutter2.out -text
+usr.bin/jot/tests/regress.tabs.out -text
+usr.bin/jot/tests/regress.wX1.out -text
+usr.bin/jot/tests/regress.wXl.out -text
+usr.bin/jot/tests/regress.wc.out -text
+usr.bin/jot/tests/regress.wdl.out -text
+usr.bin/jot/tests/regress.wdn.out -text
+usr.bin/jot/tests/regress.we.out -text
+usr.bin/jot/tests/regress.wf.out -text
+usr.bin/jot/tests/regress.wg.out -text
+usr.bin/jot/tests/regress.wgd.out -text
+usr.bin/jot/tests/regress.wo.out -text
+usr.bin/jot/tests/regress.wp1.out -text
+usr.bin/jot/tests/regress.wp2.out -text
+usr.bin/jot/tests/regress.wp3.out -text
+usr.bin/jot/tests/regress.wp4.out -text
+usr.bin/jot/tests/regress.wp5.out -text
+usr.bin/jot/tests/regress.wp6.out -text
+usr.bin/jot/tests/regress.wu.out -text
+usr.bin/jot/tests/regress.wwe.out -text
+usr.bin/jot/tests/regress.wx.out -text
+usr.bin/jot/tests/regress.wxn.out -text
+usr.bin/jot/tests/regress.x.out -text
+usr.bin/jot/tests/regress.xaa.out -text
+usr.bin/jot/tests/regress.yes.out -text
 usr.bin/kdump/Makefile -text
 usr.bin/kdump/kdump.1 -text
 usr.bin/kdump/kdump.c -text
