--- a/usr.bin/bsdiff/Makefile
+++ b/usr.bin/bsdiff/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: src/usr.bin/bsdiff/Makefile,v 1.1.2.1 2005/08/15 18:34:21 cperciva Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/bsdiff/Makefile 148771 2005-08-06 01:59:06Z cperciva $
 
 SUBDIR=	bsdiff bspatch
 
