--- a/usr.bin/bsdiff/Makefile.inc
+++ b/usr.bin/bsdiff/Makefile.inc
@@ -1,4 +1,4 @@
-# $FreeBSD: src/usr.bin/bsdiff/Makefile.inc,v 1.2.2.1 2005/08/15 18:34:21 cperciva Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/bsdiff/Makefile.inc 201386 2010-01-02 10:27:05Z ed $
 
 .include "../Makefile.inc"
-
