fix a few issues

--- a/usr.bin/indent/Makefile
+++ b/usr.bin/indent/Makefile
@@ -1,6 +1,10 @@
+# $MidnightBSD$
 #	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/indent/Makefile 249657 2013-04-19 19:45:00Z ed $
 
 PROG=	indent
 SRCS=	indent.c io.c lexi.c parse.c pr_comment.c args.c
+
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 .include <bsd.prog.mk>
