sync grep with freebsd.

--- a/usr.bin/grep/Makefile
+++ b/usr.bin/grep/Makefile
@@ -1,5 +1,6 @@
+# $MidnightBSD$
 #	$NetBSD: Makefile,v 1.4 2011/02/16 01:31:33 joerg Exp $
-#	$MidnightBSD$
+#	$FreeBSD: stable/10/usr.bin/grep/Makefile 292588 2015-12-22 08:03:23Z delphij $
 #	$OpenBSD: Makefile,v 1.6 2003/06/25 15:00:04 millert Exp $
 
 .include <bsd.own.mk>
@@ -31,14 +32,15 @@ MLINKS= grep.1 egrep.1 \
 	grep.1 fgrep.1 \
 	grep.1 zgrep.1 \
 	grep.1 zegrep.1 \
-	grep.1 zfgrep.1 \
-	grep.1 xzgrep.1 \
-	grep.1 xzegrep.1 \
-	grep.1 xzfgrep.1 \
-	grep.1 lzgrep.1 \
-	grep.1 lzegrep.1 \
-	grep.1 lzfgrep.1
+	grep.1 zfgrep.1
 .endif
+
+LDADD=	-lz
+DPADD=	${LIBZ}
+
+.if !defined(WITHOUT_LZMA_SUPPORT)
+LDADD+=	-llzma -lpthread
+DPADD+=	${LIBLZMA} ${LIBPTHREAD}
 
 LINKS+=	${BINDIR}/${PROG} ${BINDIR}/xzgrep \
 	${BINDIR}/${PROG} ${BINDIR}/xzegrep \
@@ -47,10 +49,17 @@ LINKS+=	${BINDIR}/${PROG} ${BINDIR}/xzgrep \
 	${BINDIR}/${PROG} ${BINDIR}/lzegrep \
 	${BINDIR}/${PROG} ${BINDIR}/lzfgrep
 
-LDADD=	-lz -llzma
-DPADD=	${LIBZ} ${LIBLZMA}
+MLINKS+= grep.1 xzgrep.1 \
+	 grep.1 xzegrep.1 \
+	 grep.1 xzfgrep.1 \
+	 grep.1 lzgrep.1 \
+	 grep.1 lzegrep.1 \
+	 grep.1 lzfgrep.1
+.else
+CFLAGS+= -DWITHOUT_LZMA
+.endif
 
-.if !defined(WITHOUT_BZIP2)
+.if !defined(WITHOUT_BZIP2_SUPPORT)
 LDADD+=	-lbz2
 DPADD+=	${LIBBZ2}
 
@@ -67,7 +76,7 @@ CFLAGS+= -DWITHOUT_BZIP2
 .endif
 
 .if !defined(WITHOUT_GNU_COMPAT)
-CFLAGS+= -I/usr/include/gnu
+CFLAGS+= -I${DESTDIR}/usr/include/gnu
 LDADD+=	-lgnuregex
 DPADD+=	${LIBGNUREGEX}
 .endif
@@ -76,6 +85,10 @@ DPADD+=	${LIBGNUREGEX}
 .include "${.CURDIR}/nls/Makefile.inc"
 .else
 CFLAGS+= -DWITHOUT_NLS
+.endif
+
+.if ${MK_TESTS} != "no"
+SUBDIR+=	tests
 .endif
 
 .include <bsd.prog.mk>
