--- a/usr.bin/finger/Makefile
+++ b/usr.bin/finger/Makefile
@@ -1,10 +1,9 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/finger/Makefile 226358 2011-10-14 07:24:23Z ed $
 
 PROG=	finger
 SRCS=	finger.c lprint.c net.c sprint.c util.c
 MAN=	finger.1 finger.conf.5
-
-WARNS?=	2
 
 .include <bsd.prog.mk>
