sync find with freebsd.

--- a/usr.bin/find/Makefile
+++ b/usr.bin/find/Makefile
@@ -1,9 +1,12 @@
-#	@(#)Makefile	8.1 (Berkeley) 6/6/93
 # $MidnightBSD$
+#	@(#)Makefile	8.1 (Berkeley) 6/6/93
+# $FreeBSD: stable/10/usr.bin/find/Makefile 249657 2013-04-19 19:45:00Z ed $
 
 PROG=	find
 SRCS=	find.c function.c ls.c main.c misc.c operator.c option.c \
 	getdate.y
 YFLAGS=
+
+NO_WMISSING_VARIABLE_DECLARATIONS=
 
 .include <bsd.prog.mk>
