--- a/usr.bin/file2c/Makefile
+++ b/usr.bin/file2c/Makefile
@@ -1,4 +1,12 @@
 # $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/file2c/Makefile 264996 2014-04-27 01:15:10Z jmmv $
+
+.include <bsd.own.mk>
 
 PROG=	file2c
+
+.if ${MK_TESTS} != "no"
+SUBDIR+= tests
+.endif
+
 .include <bsd.prog.mk>
