--- a/.gitattributes
+++ b/.gitattributes
@@ -75854,6 +75854,19 @@ usr.bin/file/magic.5 -text
 usr.bin/file2c/Makefile -text
 usr.bin/file2c/file2c.1 -text
 usr.bin/file2c/file2c.c -text
+usr.bin/file2c/tests/Makefile svneol=native#text/plain
+usr.bin/file2c/tests/legacy_test.sh svneol=native#text/plain
+usr.bin/file2c/tests/regress.1.out -text
+usr.bin/file2c/tests/regress.2.out -text
+usr.bin/file2c/tests/regress.3.out -text
+usr.bin/file2c/tests/regress.4.out -text
+usr.bin/file2c/tests/regress.5.out -text
+usr.bin/file2c/tests/regress.6.out -text
+usr.bin/file2c/tests/regress.7.out -text
+usr.bin/file2c/tests/regress.8.out -text
+usr.bin/file2c/tests/regress.9.out -text
+usr.bin/file2c/tests/regress.in -text
+usr.bin/file2c/tests/regress.sh svneol=native#text/plain
 usr.bin/find/Makefile -text
 usr.bin/find/extern.h -text
 usr.bin/find/find.1 -text
