--- a/.gitattributes
+++ b/.gitattributes
@@ -75817,6 +75817,21 @@ usr.bin/dpv/dpv.1 svneol=native#text/plain
 usr.bin/dpv/dpv.c svneol=native#text/plain
 usr.bin/dpv/dpv_util.h svneol=native#text/plain
 usr.bin/drill/Makefile svneol=native#text/plain
+usr.bin/dtc/HACKING -text
+usr.bin/dtc/Makefile svneol=native#text/plain
+usr.bin/dtc/checking.cc svneol=native#text/plain
+usr.bin/dtc/checking.hh -text
+usr.bin/dtc/dtb.cc svneol=native#text/plain
+usr.bin/dtc/dtb.hh -text
+usr.bin/dtc/dtc.1 svneol=native#text/plain
+usr.bin/dtc/dtc.cc svneol=native#text/plain
+usr.bin/dtc/fdt.cc svneol=native#text/plain
+usr.bin/dtc/fdt.hh -text
+usr.bin/dtc/input_buffer.cc svneol=native#text/plain
+usr.bin/dtc/input_buffer.hh -text
+usr.bin/dtc/string.cc svneol=native#text/plain
+usr.bin/dtc/string.hh -text
+usr.bin/dtc/util.hh -text
 usr.bin/du/Makefile -text
 usr.bin/du/du.1 -text
 usr.bin/du/du.c -text
