--- a/usr.bin/enigma/Makefile
+++ b/usr.bin/enigma/Makefile
@@ -1,4 +1,5 @@
-# $FreeBSD: src/usr.bin/enigma/Makefile,v 1.9 2004/02/05 22:44:24 ru Exp $
+# $MidnightBSD$
+# $FreeBSD: stable/10/usr.bin/enigma/Makefile 125503 2004-02-05 22:44:25Z ru $
 
 PROG=	enigma
 
